# pocket-fansv2

./: .gitignore  Anchor.toml  DEVNET.md  LICENSE  README.md  live_flow.cjs  package-lock.json  package.json
app/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
app/scripts/: encoder-parity.ts  horizon-pin-check.ts  horizon-window-check.ts  (+4 more)
oracle-service/: .env.example  .gitignore  package-lock.json  package.json
programs/pocket_fans/: Cargo.toml
programs/pocket_fans/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/pocket_fans/src/instructions/: create_rule.rs  execute_rule.rs  execute_rule_direct.rs  execute_rule_staked.rs  execute_rule_staked_direct.rs  execute_rule_staked_verified_win.rs  execute_rule_verified.rs  execute_rule_verified_win.rs  initialize_vault.rs  revoke_rule.rs  txoracle.rs  winverify.rs  withdraw_from_vault.rs
programs/pocket_fans/tests/: README.md  test_delegation_accumulate.rs  test_encoder_parity.rs  test_keeper_wiring.rs  test_logic_stub.rs  test_marinade_stake_clone.rs  test_orca_clone.rs  test_teamwin_verified_clone.rs
programs/pocket_fans/tests/fixtures/: daily_scores_roots.json  devusdc_mint.json  marinade_liq_msol_leg_authority.json  marinade_liq_sol_leg.json  marinade_msol_mint_authority.json  marinade_reserve.json  marinade_state.json  msol_mint.json  stat_validation_18179759.json  stat_validation_18187298_midmatch.json  stat_validation_18257739_fulltime.json  tick_array_0.json  tick_array_1.json  vault_a.json  vault_b.json  whirlpool.json  wsol_mint.json
(+47 files in other folders)
